# uqi_JCAIEAH002

./: README.md  datanilai.csv  uqi_capstone1_nilai_siswa.sql
.devcontainer/: devcontainer.json
Capstone 1/: uqi_capstone1.py
Capstone 2/: Customer Lifetime Value.docx  Model_CLV_DecisionTree.pkl  README.md  Uqi_Capstone2.ipynb
Capstone 3/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  users.json
Capstone 3/.streamlit/: config.toml
Capstone 3/modules/: agent.py  auth.py  ingest.py
